@@ -1,2 +1,6 @@
 # C360
 Repo for CSE 360 Final Team Project
+For running the program in VS code,
+Add javafx libraries in referenced libraries if using Java 9 and above
+Add "vmArgs": "--module-path \"(PATH to your libray)\" --add-modules javafx.controls" to launch.json file.
+Replace (PATH to your libray) with the path to the /lib of your javafx
